@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Device-IRU_GE
-version:            0.91
+version:            0.92
 abstract:           Perl Module to read and control a GE Aviation Systems IRU
 author:
     - root <root@localdomain>
@@ -10,7 +10,8 @@ configure_requires:
     ExtUtils::MakeMaker:  0
 build_requires:
     ExtUtils::MakeMaker:  0
-requires:  {}
+requires:
+    Device::SerialPort:  1.04
 no_index:
     directory:
         - t
