@@ -5,7 +5,7 @@ use ExtUtils::MakeMaker;
 WriteMakefile(
     NAME              => 'Device::IRU_GE',
     VERSION_FROM      => 'lib/Device/IRU_GE.pm', # finds $VERSION
-    PREREQ_PM         => {}, # e.g., Module::Name => 1.1
+    PREREQ_PM         =>  { Device::SerialPort=>1.04   }, # e.g., Module::Name => 1.1
     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM  => 'lib/Device/IRU_GE.pm', # retrieve abstract from module
        AUTHOR         => 'root <root@localdomain>') : ()),
