@@ -4,3 +4,8 @@ Revision history for Perl extension Device::IRU_GE.
 	- original version; created by h2xs 1.23 with options
 		-AXc -n Device::IRU_GE
 
+.92  Thr June 09 2010
+  1. Added Device::SerialPort to PREREQ_PM in Makefile.PM
+
+
+
